betav0.0.4, update layout

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Web Fingerprint Scanner",
   "version": "0.0.3",
-  "description": "识别网站指纹并生成FOFA/Quake网络空引擎搜索语法的浏览器扩展",
+  "description": "识别网站特征并生成FOFA/Quake网络空引擎搜索语法的浏览器扩展",
   "permissions": [
     "activeTab",
     "tabs"
@@ -12,5 +12,10 @@
   ],
   "action": {
     "default_popup": "popup/popup.html"
+  },
+  "icons": {
+    "16": "icons/icon.png",
+    "48": "icons/icon.png",
+    "128": "icons/icon.png"
   }
 }
